...
  useMount(() => {
    lockToPortrait();
  });

  return (
    <ImageBackground source={backgrounds.welcome} style={styles.Screen}>
      <Screen testID={'welcomeScreen'} background={'transparent'}>
        <StatusBar
          animated={true}
          barStyle="light-content"
          translucent={true} // Android. The app will draw under the status bar.
          backgroundColor="transparent" // Android. The background color of the status bar.
        />
...
            </OldButton>
          </View>
          <View style={styles.mainActions}>
            {/* BUTTON: CALL TO ACTION */}
            <Button
              onPress={(): void => navigation.navigate('AdventureCode')}
              testID={'ctaAdventureCode'}
              size="l"
              color="primary"
            >
              {t('haveCode')}
            </Button>
            <Spacer />
...
